--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body>
+<body class="container">
 
     <section class="hero-section">
 
@@ -66,7 +66,31 @@
 
 
 
+    <section class="">
 
+        <h1 class="Experiences-header">Experiences</h1>
+
+
+        <div class="experience-area">
+            <div class="half-width">
+                <h1>Fullstack developer</h1>
+                <h3>Going to be a developer in 2023</h3>
+                <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor non totam dicta eius possimus laborum
+                    doloribus deserunt similique sapiente nobis.</P>
+
+            </div>
+
+            <div class="half-width">
+                <h1>Normal developer</h1>
+                <h3>Going to be a Normal web developer in 2023</h3>
+                <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor non totam dicta eius possimus laborum
+                    doloribus deserunt similique sapiente nobis.</P>
+
+            </div>
+        </div>
+
+
+    </section>
 
 
 
