--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <section class="hero-section">
 
-        <div class="half-width">
+        <div class="half-width ">
             <h2 class="top-header">This is </h2>
             <h1 class="name">Ittehad Najat</h1>
             <h3>Going to be web developer in 2023</h3>
@@ -72,7 +72,7 @@
 
 
         <div class="experience-area">
-            <div class="half-width">
+            <div class="half-width shadow padding-sm">
                 <h1>Fullstack developer</h1>
                 <h3>Going to be a developer in 2023</h3>
                 <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor non totam dicta eius possimus laborum
@@ -80,7 +80,7 @@
 
             </div>
 
-            <div class="half-width">
+            <div id="box-2" class="half-width shadow padding-sm">
                 <h1>Normal developer</h1>
                 <h3>Going to be a Normal web developer in 2023</h3>
                 <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor non totam dicta eius possimus laborum
@@ -95,5 +95,10 @@
 
 
 </body>
+
+<footer>
+
+    <p>@ First practice - making own portfolio website using HTML and CSS</p>
+</footer>
 
 </html>
