--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <section class="hero-section">
 
-        <div class="half-width ">
+        <div class="half-width test">
             <h2 class="top-header">This is </h2>
             <h1 class="name">Ittehad Najat</h1>
             <h3>Going to be web developer in 2023</h3>
@@ -26,9 +26,12 @@
                 excepturi corporis autem, nesciunt sunt, illo ipsum quisquam repellendus quia? Nisi, reprehenderit
             </p>
 
-            <br> <br>
-            <a class="link-button" target="_blank" href="https://www.facebook.com/profile.php?id=100076333071582">Hire
-                me</a>
+
+            <div class="test-2">
+                <a class="link-button" target="_blank"
+                    href="https://www.facebook.com/profile.php?id=100076333071582">Hire
+                    me</a>
+            </div>
 
         </div>
 
@@ -59,7 +62,12 @@
                 dignissimos delectus expedita tenetur atque aperiam accusantium ratione. Illo consectetur magnam
                 architecto repellendus labore provident est adipisci voluptatum, tenetur molestiae nostrum ex vero
                 maiores nihil nobis, corporis, optio veniam aspernatur alias voluptates! Cum, in possimus!</p>
-            <br> <br> <a class="link-button" target="_blank" href="WWW.facebook.com">Check resume</a>
+
+            <div class="second-button">
+                <a class="link-button" target="_blank" href="WWW.facebook.com">Check resume</a>
+
+            </div>
+
         </div>
 
     </section>
